# kick_start

./: .gitignore  README.md
2019/h/h_index/: main.cpp
2020/b/: README.md
2020/b/bike_tour/: Program.cs
2020/b/bus_routes/: Program.cs  README.md
2020/b/proto/: Program.cs
2020/b/robot_path/: Program.cs  README.md
2020/c/countdown/: Cargo.toml
2020/c/countdown/src/: main.rs
2020/c/perfect_subarray/: Cargo.toml  README.md
2020/c/perfect_subarray/benches/: integer_sqrt.rs
2020/c/perfect_subarray/src/: main.rs
2020/c/perfect_subarray/tests/: 1.txt  2.txt  3.txt
2020/c/stable_wall/: Cargo.toml
2020/c/stable_wall/src/: main.rs
2020/e/: README.md
2020/e/high_buildings/: Cargo.toml  README.md
2020/e/high_buildings/src/: main.rs
2020/e/high_buildings/tests/: 1.txt
2020/e/longest_arithmetic/: Cargo.toml  README.md
2020/e/longest_arithmetic/src/: main.rs
2020/f/: README.md
2020/f/atm_queue/: README.md  a.out  main.cpp
2020/f/metal_harvest/: README.md  a.out  main.cpp
2020/f/metal_harvest/tests/: 2
2020/f/painters_duel/: README.md  a.out  main.cpp
2020/f/painters_duel/tests/: s3_block  s3_full  s3_no_selfblock  s4_block  s4_run  s6_arb  s6_full
utils/scanner/: Cargo.toml  README.md  stdin.txt
utils/scanner/src/: main.rs
