[package]
name = "perfect_subarray"
version = "0.1.0"
authors = ["qxxxb <46016483+qxxxb@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "integer_sqrt"
harness = false
